--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,10 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
-DATABASE_URL=
-DIRECT_URL=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Z3JhbmQtZG9nLTExLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_srXqnM3KPAXtj5j1gLs9CyifSL7PdC7enSbmiYM9IY
+DATABASE_URL="postgresql://postgres.vwrkfttpgcckpkxxksls:H9O4jHVHi0hADfGw@aws-0-us-east-1.pooler.supabase.com:6543/postgres" # Set this to the Transaction connection pooler string you copied in Step 1
+DIRECT_URL="postgresql://postgres.vwrkfttpgcckpkxxksls:H9O4jHVHi0hADfGw@aws-0-us-east-1.pooler.supabase.com:5432/postgres"  # Set this to the Session connection pooler string you copied in Step 1
+
+
+
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME= ...
+NEXT_PUBLIC_CLOUDINARY_API_KEY= ...
